--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -100,10 +100,10 @@
   <!-- Main content -->
   <main class="main">
     <!-- Breadcrumb -->
-    <ol class="breadcrumb">
-      <app-breadcrumb></app-breadcrumb>
-      <!-- Breadcrumb Menu-->
-      <!-- <li class="breadcrumb-menu d-md-down-none">
+    <!-- <ol class="breadcrumb"> -->
+    <!-- <app-breadcrumb></app-breadcrumb> -->
+    <!-- Breadcrumb Menu-->
+    <!-- <li class="breadcrumb-menu d-md-down-none">
         <div
           class="btn-group"
           role="group"
@@ -118,8 +118,8 @@
           >
         </div>
       </li> -->
-    </ol>
-    <div class="container-fluid"><router-outlet></router-outlet></div>
+    <!-- </ol> -->
+    <div class="container-fluid pt-4"><router-outlet></router-outlet></div>
     <!-- /.container-fluid -->
   </main>
   <!-- <app-aside [fixed]="true" [display]="false">
