--- a/src/app/components/users/teacher/course/assignments/assignments.component.css
+++ b/src/app/components/users/teacher/course/assignments/assignments.component.css
@@ -3,7 +3,14 @@ table {
   width: 100%;
 }
 
-.mat-form-field {
-  font-size: 14px;
+.example-container {
+  height: 400px;
+  overflow: auto;
   width: 100%;
 }
+
+/* .mat-form-field { */
+  /* font-size: 14px; */
+  /* width: 100%; */
+  /* overflow: auto; */
+/* } */
