--- a/src/app/components/users/teacher/course/assignments/assignments.component.html
+++ b/src/app/components/users/teacher/course/assignments/assignments.component.html
@@ -58,16 +58,17 @@
 
   <mat-card>
     <div class="row">
-      <div class="col-6">
+      <div class="col-11">
         <mat-card-title>
           Posted Assignments
         </mat-card-title>
       </div>
-      <div class="col-6">
+      <div class="col-1">
         <button
           mat-button
           class="float-right btn btn-success"
           (click)="openDialog()"
+          
         >
           Post Assignment
         </button>
@@ -80,37 +81,37 @@
           placeholder="Filter"
         />
       </mat-form-field>
-
+      <div class="example-container">
       <table mat-table [dataSource]="dataSource">
         <!-- Position Column -->
-        <ng-container matColumnDef="position">
+        <ng-container matColumnDef="assignmentNumber">
           <th mat-header-cell *matHeaderCellDef><strong>No.</strong></th>
-          <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.assignmentNumber }}</td>
         </ng-container>
 
         <!-- Name Column -->
-        <ng-container matColumnDef="name">
+        <ng-container matColumnDef="assignmentTitle">
           <th mat-header-cell *matHeaderCellDef><strong>Title</strong></th>
-          <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.assignmentTitle }}</td>
         </ng-container>
 
         <!-- Weight Column -->
-        <ng-container matColumnDef="weight">
+        <ng-container matColumnDef="addedDate">
           <th mat-header-cell *matHeaderCellDef><strong>Added On</strong></th>
-          <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.addedDate }}</td>
         </ng-container>
 
         <!-- Symbol Column -->
-        <ng-container matColumnDef="symbol">
+        <ng-container matColumnDef="dueDate">
           <th mat-header-cell *matHeaderCellDef><strong>Due Date</strong></th>
-          <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.dueDate }}</td>
         </ng-container>
 
-        <ng-container matColumnDef="totalmarks">
+        <ng-container matColumnDef="totalMarks">
           <th mat-header-cell *matHeaderCellDef>
             <strong>Total Marks</strong>
           </th>
-          <td mat-cell *matCellDef="let element">{{ element.totalmarks }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.totalMarks }}</td>
         </ng-container>
 
         <ng-container matColumnDef="controls">
@@ -118,10 +119,12 @@
           <td mat-cell *matCellDef="let element">{{ element.controls }}</td>
         </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
     </div>
+  </div>
+    
   </mat-card>
 </div>
 
@@ -129,7 +132,8 @@
 <!-- ******************************** SUBMITTED ASSIGNMENTS PAGE TEACHER *****************************-->
 <!-- ******************************** SUBMITTED ASSIGNMENTS PAGE TEACHER *****************************-->
 <!-- ******************************** SUBMITTED ASSIGNMENTS PAGE TEACHER *****************************-->
-<hr />
+
+<hr>
 <div class="row">
   <div class="col-sm-12">
     <div class="card">
@@ -152,10 +156,10 @@
               id="button-basic"
               dropdownToggle
               type="button"
-              class="btn btn-primary dropdown-toggle btn-sm"
-              aria-controls="dropdown-basic"
+              class="btn btn-primary btn-sm"
+              
             >
-              Assignment No <span class="caret"></span>
+              Download All <span class="caret"></span>
             </button>
             <ul
               id="dropdown-basic"
