* Students Assignment Page Updated * Students Quiz Page Updated

--- a/src/app/components/users/student/course/quizzes/quizzes.component.html
+++ b/src/app/components/users/student/course/quizzes/quizzes.component.html
@@ -3,6 +3,109 @@
   * Quiz Page
   * Filters Optional
 </p> -->
+<div class="col-sm-12">
+  <mat-card>
+    <div class="row">
+      <div class="col-sm-12">
+        <mat-form-field>
+          <mat-label>Choose Subject</mat-label>
+          <mat-select [(value)]="selected">
+            <mat-option>None</mat-option>
+            <mat-option value="option1">Maths</mat-option>
+            <mat-option value="option2">Chemistry</mat-option>
+            <mat-option value="option3">Physics</mat-option>
+            <mat-option value="option3">Biology</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+     
+    </div>
+  </mat-card>
+
+  <hr />
+
+  <mat-card>
+    <div class="row">
+      <div class="col-12">
+        <mat-card-title>
+          Subject Name - (Teacher Name)
+        </mat-card-title>
+      </div>
+      
+
+      <mat-form-field class="px-3">
+        <input
+          matInput
+          (keyup)="applyFilter($event.target.value)"
+          placeholder="Filter"
+        />
+      </mat-form-field>
+      <div class="example-container">
+      <table mat-table [dataSource]="dataSource">
+        <!-- Position Column -->
+        <ng-container matColumnDef="quizNumber">
+          <th mat-header-cell *matHeaderCellDef><strong>Quiz No.</strong></th>
+          <td mat-cell *matCellDef="let element">{{ element.quizNumber }}</td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="quizTitle">
+          <th mat-header-cell *matHeaderCellDef><strong>Title</strong></th>
+          <td mat-cell *matCellDef="let element">{{ element.quizTitle }}</td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="addedDate">
+          <th mat-header-cell *matHeaderCellDef><strong>Added On</strong></th>
+          <td mat-cell *matCellDef="let element">{{ element.addedDate }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="dueDate">
+          <th mat-header-cell *matHeaderCellDef><strong>Due Date</strong></th>
+          <td mat-cell *matCellDef="let element">{{ element.dueDate }}</td>
+        </ng-container>
+        
+
+        <ng-container matColumnDef="quizTime">
+          <th mat-header-cell *matHeaderCellDef><strong>Time (mins)</strong></th>
+          <td mat-cell *matCellDef="let element">{{ element.quizTime }}</td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+
+        <ng-container matColumnDef="totalMarks">
+          <th mat-header-cell *matHeaderCellDef>
+            <strong>Total Marks</strong>
+          </th>
+          <td mat-cell *matCellDef="let element">{{ element.totalMarks }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="status">
+          <th mat-header-cell *matHeaderCellDef>
+            <strong>Status</strong>
+          </th>
+          <td mat-cell *matCellDef="let element">{{ element.status }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="controls">
+          <th mat-header-cell *matHeaderCellDef><strong>Controls</strong></th>
+          <td mat-cell *matCellDef="let element">{{ element.controls }}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+    </div>
+  </div>
+    
+  </mat-card>
+</div>
+
+
+
+
+
+
 
 
 <div class="row">
