--- a/src/app/components/users/teacher/teacherdashboard/teacherdashboard.component.html
+++ b/src/app/components/users/teacher/teacherdashboard/teacherdashboard.component.html
@@ -3,7 +3,7 @@
     <div class="col-sm-6 col-md-4 col-lg-2 pb-4">
       <button
         class="btn btn-sm btn-secondary border border-secondary btn-block h-100"
-        tooltip="Add Class"
+        matTooltip="Search for academy"
         triggers="mouseenter:mouseleave"
         (click)="openDialog()"
       >
