--- a/src/app/components/users/academyadmin/teachers/teachers.component.html
+++ b/src/app/components/users/academyadmin/teachers/teachers.component.html
@@ -3,53 +3,52 @@
 * Teacher Card
 </p> -->
 
-
 <div class="animated fadeIn">
-    <div class="row">
-      <div class="col-4">
-        <div class="card text-white bg-dark">
-          <div class="card-header h4 ">
-            Safi
-            <button
-              class="btn btn-sm btn-outline-danger  float-right ml-2"
-              popover="Delete"
-              triggers="mouseenter:mouseleave"
-            >
-              <span><i class="fa fa-trash"></i> </span>
-            </button>
-            <rating
-              class="ml-3"
-              [(ngModel)]="rate"
-              [max]="max"
-              [readonly]="isReadonly"
-              (onHover)="hoveringOver($event)"
-              (onLeave)="resetStar()"
-              [titles]="['one', 'two', 'three']"
-              name="rate"
-            ></rating>
-          </div>
-          <div class="card-body">
-            <div>
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item bg-dark p-1">
-                  <i class="icon-people"></i> Classes :
-                  <strong> 9<sup>th</sup>, 10<sup>th</sup> </strong>
-                </li>
-                <li class="list-group-item bg-dark p-1">
-                  <i class="icon-user"></i> Subjects :
-                  <strong> Maths, Physics </strong>
-                </li>
-                <li class="list-group-item bg-dark p-1">
-                  <i class="icon-user"></i> Recorder Lectures :
-                  <strong> 10 </strong>
-                </li>
-                <li class="list-group-item bg-dark p-1">
-                  <i class="icon-user"></i> Live Lectures : <strong> 16 </strong>
-                </li>
-              </ul>
-            </div>
+  <div class="row">
+    <div class="col-3" *ngFor="let teacher of teachers">
+      <div class="card text-white bg-dark">
+        <div class="card-header h4 ">
+          {{ teacher.data.teacherName }}
+          <button
+            class="btn btn-sm btn-outline-danger  float-right ml-2"
+            matTooltip="Delete - I think this option is not justifiable!! - DISCUSS"
+            triggers="mouseenter:mouseleave"
+          >
+            <span><i class="fa fa-trash"></i> </span>
+          </button>
+          <!-- (onHover)="hoveringOver($event)"
+            (onLeave)="resetStar()" -->
+          <rating
+            class="ml-3"
+            [(ngModel)]="rate"
+            [max]="max"
+            [readonly]="isReadonly"
+            [titles]="['one', 'two', 'three']"
+            name="rate"
+          ></rating>
+        </div>
+        <div class="card-body">
+          <div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item bg-dark p-1">
+                <i class="icon-people"></i> Class :
+                <strong> {{ teacher.data.className }} </strong>
+              </li>
+              <li class="list-group-item bg-dark p-1">
+                <i class="icon-user"></i> Subject :
+                <strong> {{ teacher.data.subjectName }} </strong>
+              </li>
+              <li class="list-group-item bg-dark p-1">
+                <i class="icon-user"></i> Recorded Lectures :
+                <strong> 10 </strong>
+              </li>
+              <li class="list-group-item bg-dark p-1">
+                <i class="icon-user"></i> Live Lectures : <strong> 16 </strong>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
