--- a/src/app/components/users/student/studentdashboard/studentdashboard.component.html
+++ b/src/app/components/users/student/studentdashboard/studentdashboard.component.html
@@ -1,5 +1,20 @@
 <div class="animated fadeIn">
   <div class="row">
+    <div class="col-sm-6 col-md-4 col-lg-2 pb-4">
+      <button
+        class="btn btn-sm btn-secondary border border-secondary btn-block h-100"
+        matTooltip="Search for academy"
+        triggers="mouseenter:mouseleave"
+        (click)="openDialog()"
+      >
+        <p class="display-1 text-dark">+</p>
+      </button>
+    </div>
+  </div>
+</div>
+
+<div class="animated fadeIn">
+  <div class="row">
     <div class="col-4">
       <div class="card text-white bg-dark">
         <div class="card-header h4 ">
