✅profiling - img upload ✅classrooms management ❌assignments & quizzes

--- a/src/app/components/account/signup/signup.component.html
+++ b/src/app/components/account/signup/signup.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <mat-horizontal-stepper [linear]="true" #stepper>
+  <mat-horizontal-stepper [linear]="false" #stepper>
     <mat-step [stepControl]="basicUserForm">
       <ng-template matStepLabel>User Basic Info</ng-template>
       <div class="container">
