✅assignemt upload ✅assignment editor ❌post assignment ❌push notifications ❌create & upload quiz

--- a/src/app/components/users/academyadmin/profile/profile.component.html
+++ b/src/app/components/users/academyadmin/profile/profile.component.html
@@ -691,8 +691,9 @@
                       <div class="card-footer p-4">
                         <div class="row">
                           <button
+                            *ngIf="user"
                             class="btn btn-block btn-success"
-                            (click)="signUp()"
+                            (click)="updateProfile(user.uid)"
                           >
                             Update Profile
                           </button>
